<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MorpionActivity!</string>
    <string name="app_name">Tic-tac-toe 1vs1</string>
    <string name="newGame">New game</string>
    <string name="quitGame">Close the app</string>
    <string name="welcome">Welcome to this game, Tic-tac-toe 1vs1 !</string>
    <string name="titleGame">Have fun !</string>
    <string name="turn">Turn of the player : </string>
    <string name="nothing">.</string>
    <string name="history">Old games</string>
    <string name="help">Help</string>
    <string name="effacer">Delete this game</string>
    <string name="voir">See the result in detail</string>
    <string name="aide1">Who starts a game ?</string>
    <string name="aide2">You are player "X". The application will automatically switch between the player "X" and the player "O" to start the new game, it\'s only fair.</string>
    <string name="aide3">I have played a game and I can\'t see it in the history. Why ?</string>
    <string name="aide4">Because you didn\'t find the configuration screen. You can choose if the application should save a game with no winner.</string>
    <string name="aide5">Can I play on my own ?</string>
    <string name="aide6">Yes, you can play againt an AI. You just have to select the option \'Against AI\' in the main navigation spinner.</string>
    <string name="aide7">Can I propose some ameliorations for this app ?</string>
    <string name="aide8">Of course ! You should leave a comment on the Google Play Store.</string>
    <string name="aide9">Who developed this application ?</string>
    <string name="aide10">Me, Stéphane Mathis. It\'s the first app that I\'ve done to learn Android.</string>
    <string name="aide11">What is displayed on the graph ?</string>
    <string name="aide12">The blue curve corresponds to your victories, the red curve to the victories of your opponents and the black curve equalities. They allow you to compare the evolution of the score over the games (horizontal axis).</string>
    <string name="aide13">Why is there only 21 detailed history games ?</string>
    <string name="aide14">You can see the selected one with the ten done before and after.</string>
    <string name="aide20">What happens when I launch the app ?</string>
    <string name="aide21">If you\'re connected with your Google account, your preferences are synced with all your devices. Your game history is partially sync as well.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saveText">Save the equalities</string>
    <string name="nohistory">History is empty.</string>
    <string name="menuhelp">Help</string>
    <string name="menupref">Configuration</string>
    <string name="menuquit">Close</string>
    <string name="sharetry">Tic-tac-toe 1vs1 - Try it !</string>
    <string name="win">Victory</string>
    <string name="loose">Defeat</string>
    <string name="winb">Victory</string>
    <string name="winr">Lost</string>
    <string name="equal">Equality</string>
    <string name="equaltry">Tie</string>
    <string name="share1"> games : </string>
    <string name="share2"> victories, </string>
    <string name="share3"> defeats.</string>
    <string name="resethistory">History cleared.</string>
    <string name="sharewith">Share with</string>
    <string name="whattodo">What do you want to do ?</string>
    <string name="reset">Reset</string>
    <string name="share">Share</string>
    <string name="sure">Do you want to delete the history ?</string>
    <string name="resume">Game n°</string>
    <string name="game">Game n°</string>
    <string name="over"> It\'s over.</string>
    <string name="saved">Result saved.</string>
    <string name="restart">Restart</string>
    <string name="ctrlz">Undo</string>
    <string name="newgame">End of game</string>
    <string name="newgame1">Restart another game</string>
    <string name="newgame2">Back to main screen</string>
    <string name="deletegame">Delete this game ?</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="m1">Via same phone</string>
    <string name="m2">History</string>
    <string name="m3">Help</string>
    <string name="empty"></string>
    <string name="preference">PREFERENCES</string>
    <string name="s1">games selected</string>
    <string name="s2">game selected</string>
    <string name="m4">List</string>
    <string name="m5">Cards</string>
    <string name="m6">Chart</string>
    <string name="charteneeds">You need to do at least two games in order to display the chart</string>
    <string name="undobar_sample_message">Game deleted.</string>
    <string name="undo">Undo</string>
    <string name="m7">New game</string>
    <string name="delete">Supprimer</string>
    <string name="chossetheme">Use the Dark theme</string>
    <string name="sc1">Swype</string>
    <string name="sc2">Swype to the left or the right in order to remove this game from the list.</string>
    <string name="sc3">Change the theme</string>
    <string name="sc4">Check the box to activate the dark theme, go back to this screen and click again to activate the light theme.</string>
    <string name="sc5">Show the preference screen to change between the light and dark theme.</string>
    <string name="m8">Via Bluetooth</string>
    <string name="s1s">Bluetooth is not Impossible to establish the connection</string>
    <string name="s2s">Your device is already visible</string>
    <string name="s3">Stop service</string>
    <string name="s4">Launch service</string>
    <string name="s5">You are not connected with your partner</string>
    <string name="s6">Connection established</string>
    <string name="s7">Connected :</string>
    <string name="s8">Impossible to establish the connection</string>
    <string name="s9">Connection lost</string>
    <string name="s10">No device</string>
    <string name="s11">Scan in progress…</string>
    <string name="s12">Choose a device</string>
    <string name="s13">No device found</string>
    <string name="s14">Saved devices</string>
    <string name="s15">New devices</string>
    <string name="s16">Scan the network</string>
    <string name="s17">Next: ?</string>
    <string name="s18">How to connect with your partner?</string>
    <string name="s19">1. Turn on the bluetooth</string>
    <string name="s20">The button below enabled your phone to be visible by other phone via bluetooth. It may be necessary for the next step.</string>
    <string name="s21">Enable the other devices to see yours for 300s.</string>
    <string name="s22">2. Join your two devices</string>
    <string name="s23">The button below will display the list of phones which you have already established a connection with. If the desired one is not present, you will have to scan the network to find it.</string>
    <string name="s24">Search your partner</string>
    <string name="s25">Close the connection</string>
    <string name="s26">You can turn on and off the bluetooth service with the button below.</string>
    <string name="s27">Stop service</string>
    <string name="s28">Color</string>
    <string name="s29">Color</string>
    <string name="s30">c</string>
    <string name="s31">Against AI</string>
    <string name="s32">Welcome !</string>
    <string name="s33">This application allows you to play by yoursel against the AI or with a partner, on the same phone of via Bluetooth. You can switch the game mode with the navigation list. By default you are on the 2 players mode on the same device.</string>
    <string name="s34">Victory : :win - Loose: :loose - Equality: :tie</string>
    <string name="s35">Game restored.</string>
    <string name="s36">Sign out</string>
    <string name="s37">Achievements</string>
    <string name="s38">Leaderboards</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="s39">Game modes</string>
    <string name="s40">Everything else</string>
    <string name="s41">Play Game</string>
    <string name="s42">You need to be signed in.</string>
    <string name="s43">Restarting the app is needed to change the theme</string>
	<string name="s44">Online</string>
	<string name="s45">An invitation has been sent to you</string>
	<string name="s46">Accept</string>
	<string name="s47">Decline</string>
	<string name="s48">You\'re playing with another player, you need to leave the game</string>
	<string name="s49">Connecting</string>
	<string name="s50">Please wait…</string>
	<string name="s51">Other player left the game</string>
	<string name="s52">Stop the game</string>
	<string name="s53">Quick game</string>
	<string name="s54">Invite a friend</string>
	<string name="s55">View invitations</string>
	<string name="s56">Play online</string>
	<string name="s57">Only available when connected to Google+.</string>
	<string name="s58">Online mode requires Play Services</string>
	<string name="s59">Share selected game</string>
	<string name="s60">Impossible to share</string>
	<string name="s61">Your current game won\'t be saved</string>
	<string name="s62">To exit, validate the pattern below</string>
	<string name="s63">What\'s that ?!</string>
	<string name="s64">Some testers from a long validation process pointed out that it can be really frustating to press the back button and lose the current game. So to be sure you didn\'t miss touched the back key, you need to confirm your first intention to exit without saving.</string>
	<string name="s65">Theme</string>
	<string name="s66">X\'s color</string>
	<string name="s67">O\'s color</string>
	<string name="s68">You</string>
	<string name="s69">AI / Friend</string>
	<string name="s70">VICTORIES OVER TIME</string>
	<string name="s71">MOST VICTORIOUS</string>
	<string name="s72">RESULTS REPARTITION</string>
</resources>