<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textStyle="bold" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp" >

        <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/newGame" />

        <Button
            android:id="@+id/history"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/history" />

        <Button
            android:id="@+id/buttonQuitGame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/quitGame" />
    </LinearLayout>

</LinearLayout>