<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/borderPadding"
        android:layout_marginRight="@dimen/borderPadding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_action_helprestore"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/aide20"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/linegraylight"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/aide21"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_action_av_shuffle"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/aide1"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/linegraylight"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/aide2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_action_content_helpsave"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/aide3"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/linegraylight"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/aide4"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_action_helplist"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/aide13"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/linegraylight"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/aide14"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_action_helpgraph"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/aide11"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/linegraylight"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/aide12"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_action_helpalone"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/aide5"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/linegraylight"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/aide6"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_action_helppropo"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/aide7"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/linegraylight"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/aide8"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_action_helpdev"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/aide9"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/linegraylight"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/aide10"
            android:textSize="16sp" />
    </TableLayout>

</ScrollView>